# CreatorEngine

./: .gitignore  .mailmap  CMakeLists.txt  Main.cpp  README  imgui.ini  main.cpp  main.h  mctr.h
Document/Miscs/scripts/: shaderc.bat
Document/Miscs/shaders/spir-v/: simple_fragment.spv  simple_vertex.spv
Document/Miscs/utils/: ioutils.h
Driver/: RenderDevice.cpp  RenderDevice.h
Driver/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanInclude.cpp  VulkanInclude.h  VulkanRenderDevice.cpp  VulkanRenderDevice.h  VulkanUtils.h
Drivers/: Buffer.h  CommandList.h  Pipeline.h  RenderDevice.cpp  RenderDevice.h  Sampler.h  SwapChain.h  Texture.h
Drivers/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandList.cpp  VulkanCommandList.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderDevice.cpp  VulkanRenderDevice.h  VulkanSampler.cpp  VulkanSampler.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUtils.h
Engine/: CMakeLists.txt
Engine/Include/: Error.h  HashMap.h  Logger.h  MM.h  String.h  Typedef.h  Typedefs.h  Vector.h
Engine/Include/Engine/: Engine.h
Engine/Source/Driver/: RenderDevice.cpp  RenderDevice.h  RenderDriver.cpp
Engine/Source/Public/: Engine.cpp
Engine/Source/Runtime/Driver/: Buffer.cpp  Buffer.h  CommandList.cpp  CommandList.h  Pipeline.cpp  Pipeline.h  RenderDevice.cpp  RenderDevice.h  VulkanInclude.h  VulkanUtils.h
Engine/Source/Runtime/Render/: Scene.cpp  Scene.h
Engine/Source/Runtime/Window/: Window.cpp  Window.h
Engine/Source/Window/: Window.cpp  Window.h
Include/Vdx/: Error.h  Typedef.h
Include/vronk/: typedef.h
Lib/imgui/backends/: imgui_impl_vulkan.h
Misc/: main.cpp
Modules/Window/: Window.cpp  Window.h
Runtime/Window/: Window.h
Samples/: CMakeLists.txt
Samples/Demo/: CMakeLists.txt  main.cpp
Shaders/glsl/: simple_fragment.glsl
Utils/: IOUtils.h
driver/: VdxBuffer.h  VdxRenderDevice.cpp  VdxRenderDevice.h
driver/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanInclude.cpp  VulkanInclude.h  VulkanRenderDevice.cpp  VulkanRenderDevice.h
include/Vdx/: Typedef.h
include/veronica/: typedef.h
lib/ImGuizmo/: ImGuizmo.cpp
lib/imgui/backends/: imgui_impl_vulkan.cpp
lib/tiny_obj_loader/: tiny_obj_loader.h
lib/vulkan/: vulkan_profiles.hpp
scripts/: astcopy.bat  shaderc.bat
shader/glsl/: simple_fragment.glsl
shaders/: shaderc.bat
shaders/glsl/: shaderc.cmd  simple_fragment.glsl  simple_vertex.glsl
shaders/spir-v/: simple_fragment.spv  simple_vertex.spv
utils/: enumutils.h  ioutils.h
