CMAKE_MINIMUM_REQUIRED(VERSION 3.26)
PROJECT(vrc)

SET(CMAKE_CXX_STANDARD 23)

SET(LIBRARY_DIRECTORIES ${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(SYSTEM include ${LIBRARY_DIRECTORIES} ${LIBRARY_DIRECTORIES}/imgui)

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}
)

FILE(GLOB ENGINE_MODULE_SOURCES
  ${PROJECT_SOURCE_DIR}/*.cpp
  # -- ImGui --
  ${LIBRARY_DIRECTORIES}/imgui/*.cpp
  ${LIBRARY_DIRECTORIES}/imgui/backends/imgui_impl_glfw.cpp
  ${LIBRARY_DIRECTORIES}/imgui/backends/imgui_impl_vulkan.cpp
  ${LIBRARY_DIRECTORIES}/ImGuizmo/ImGuizmo.cpp
  ${LIBRARY_DIRECTORIES}/imnodes/imnodes.cpp
)

SET(GLFW_LIBRARY_DIRECTORY ${LIBRARY_DIRECTORIES}/GLFW/lib-mingw-w64)

IF (MSVC)
  SET(GLFW_LIBRARY_DIRECTORY ${LIBRARY_DIRECTORIES}/GLFW/lib-vc2022)
ENDIF()

LINK_DIRECTORIES(
  ${LIBRARY_DIRECTORIES}/vulkan/lib
  ${GLFW_LIBRARY_DIRECTORY}
)

ADD_EXECUTABLE(${PROJECT_NAME} ${ENGINE_MODULE_SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
  glfw3
)