SET(ENGINE_MODULE_NAME "Engine")

ADD_DEFINITIONS(-DUSE_VOLK_LOADER)

FILE(GLOB_RECURSE ENGINE_MODULE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Source/*.cpp)

ADD_LIBRARY(${ENGINE_MODULE_NAME} STATIC ${ENGINE_MODULE_SOURCES})

IF(NOT DEFINED USE_VOLK_LOADER)
  TARGET_LINK_LIBRARIES(${ENGINE_MODULE_NAME}
    PUBLIC
      ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/vulkan/lib/vulkan-1.lib
  )
ENDIF()

TARGET_INCLUDE_DIRECTORIES(${ENGINE_MODULE_NAME}
  PUBLIC
    ${PROJECT_SOURCE_DIR}/Engine/Source
  SYSTEM PUBLIC
    ${PROJECT_SOURCE_DIR}/Engine/Include
    ${PROJECT_SOURCE_DIR}/Engine/ThirdParty
)