SET(ENGINE_MODULE_NAME "Engine")

FILE(GLOB_RECURSE ENGINE_MODULE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Source/*.cpp)

ADD_LIBRARY(${ENGINE_MODULE_NAME} STATIC ${ENGINE_MODULE_SOURCES})

TARGET_COMPILE_DEFINITIONS(${ENGINE_MODULE_NAME}
  PUBLIC
    USE_VOLK_LOADER
)

SET(VULKAN_LIB_PATH "")
IF(NOT DEFINED USE_VOLK_LOADER)
  MESSAGE(STATUS "Enabled USE_VOLK_LOADER Macro")
  SET(VULKAN_LIB_PATH "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/vulkan/lib/vulkan-1.lib")
ENDIF()

TARGET_LINK_LIBRARIES(${ENGINE_MODULE_NAME}
  PUBLIC
    ${VULKAN_LIB_PATH} # vulkan-1.lib
    ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/GLFW/lib-mingw-w64/libglfw3.a
)

TARGET_INCLUDE_DIRECTORIES(${ENGINE_MODULE_NAME}
  PUBLIC
    ${PROJECT_SOURCE_DIR}/Engine/Source
  SYSTEM PUBLIC
    ${PROJECT_SOURCE_DIR}/Engine/Include
    ${PROJECT_SOURCE_DIR}/Engine/ThirdParty
)