SET(ENGINE_MODULE_NAME "Engine")

FILE(GLOB_RECURSE ENGINE_MODULE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Source/*.cpp)

ADD_LIBRARY(${ENGINE_MODULE_NAME} STATIC ${ENGINE_MODULE_SOURCES})

TARGET_COMPILE_DEFINITIONS(${ENGINE_MODULE_NAME}
  PUBLIC
    USE_VOLK_LOADER
    ENGINE_BUILD_DLL
)

TARGET_LINK_LIBRARIES(${ENGINE_MODULE_NAME}
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/GLFW/lib-mingw-w64/libglfw3.a
)

TARGET_INCLUDE_DIRECTORIES(${ENGINE_MODULE_NAME}
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Include>
    $<INSTALL_INTERFACE:Include>
)

TARGET_INCLUDE_DIRECTORIES(${ENGINE_MODULE_NAME}
  PRIVATE 
    ${CMAKE_CURRENT_SOURCE_DIR}/Source/Runtime

  SYSTEM PRIVATE 
    ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty
)

IF (NOT USE_VOLK_LOADER)
  TARGET_LINK_LIBRARIES(${ENGINE_MODULE_NAME}
    PUBLIC
      ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/vulkan/lib/vulkan-1.lib)
ENDIF ()